[project]
name = "phiarchitect-otto"
dynamic = ["version"]
authors = [
  { name="phi ARCHITECT", email="github@phiarchitect.com" },
]
description = "create and manage log entries for a python project"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual",
    "rich",
    "jinja2",
]

[project.scripts]
otto = "phiarchitect.otto.__main__:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["phiarchitect"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "phiarchitect.otto.__version__"}

[project.urls]
"Website" = "https://phiarchitect.github.io/otto"
"Repository" = "https://github.com/phiarchitect/otto"
"Issues" = "https://github.com/phiarchitect/otto/issues"